--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<audio controls> <source src="URL"> Тег audio не поддерживается вашим браузером. <a href="music.mp3">Скачайте музыку</a> </audio>
+<script language="JavaScript" src="http://ваш_сайт.ru/audio/audio-player.js"></script>
+ <object type="application/x-shockwave-flash" data="http://ваш_сайт.ru/audio/player.swf" id="audioplayer1" height="24" width="290">
+ <param name="movie" value="https://yapomog435436.github.io/audio/player.swf">
+ <param name="FlashVars" value="playerID=1&amp;soundFile=https://yapomog435436.github.io//music.mp3">
+ <param name="quality" value="high">
+ <param name="menu" value="false">
+ <param name="wmode" value="transparent">
+ </object>
