--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<script language="JavaScript" src="http://ваш_сайт.ru/audio/audio-player.js"></script>
- <object type="application/x-shockwave-flash" data="http://ваш_сайт.ru/audio/player.swf" id="audioplayer1" height="24" width="290">
- <param name="movie" value="https://yapomog435436.github.io/audio/player.swf">
+<script language="JavaScript" src="/audio/audio-player.js"></script>
+ <object type="application/x-shockwave-flash" data="audio/player.swf" id="audioplayer1" height="24" width="290">
+ <param name="movie" value="/audio/player.swf">
  <param name="FlashVars" value="playerID=1&amp;soundFile=audio/music.mp3">
  <param name="quality" value="high">
  <param name="menu" value="false">
