--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<script language="JavaScript" src="/audio/audio-player.js"></script>
- <object type="application/x-shockwave-flash" data="audio/player.swf" id="audioplayer1" height="24" width="290">
- <param name="movie" value="/audio/player.swf">
- <param name="FlashVars" value="playerID=1&amp;soundFile=audio/music.mp3">
+<script language="JavaScript" src="https://yapomog435436.github.io/audio/audio-player.js"></script>
+ <object type="application/x-shockwave-flash" data="https://yapomog435436.github.io/audio/player.swf" id="audioplayer1" height="24" width="290">
+ <param name="movie" value="https://yapomog435436.github.io/audio/player.swf">
+ <param name="FlashVars" value="playerID=1&amp;soundFile=https://yapomog435436.github.io/audio/music.mp3">
  <param name="quality" value="high">
  <param name="menu" value="false">
  <param name="wmode" value="transparent">
