--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <audio controls="controls">
-<source src="/music.mp3" type="audio/mpeg">
+<source src="music.mp3" type="audio/mpeg">
 </audio>
+<a href="https://drive.google.com/uc?export=download&id=1kGx0WAjakxFVwGTncm-jDErUKGg4Uehw">Скачать mp3</a>
