--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <source src="music.mp3" type="audio/mpeg">
 </audio>
 <a href="https://drive.google.com/uc?export=download&id=1kGx0WAjakxFVwGTncm-jDErUKGg4Uehw">Скачать mp3</a>
+<meta name="google-site-verification" content="u_ws85I26WMiNPzQccPSuI2G7d_IcbZMzlCftq0vjY0" />
